--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,17 +5,23 @@ Authors@R:
     person("Kyle", "Harris", , "koderkow@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
+URL: https://github.com/KoderKow/jikanr
+BugReports: https://github.com/KoderKow/jikanr/issues
+Imports: 
+    checkmate,
+    dplyr,
+    glue,
+    httr2,
+    janitor,
+    jsonlite,
+    lifecycle,
+    purrr,
+    rlang,
+    stringr,
+    tidyr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Imports: 
-    cli,
-    glue,
-    lifecycle,
-    rlang,
-    withr
-URL: https://github.com/KoderKow/jikanr
-BugReports: https://github.com/KoderKow/jikanr/issues
